deploy: 47c0fb42cf5f58229d2481cb9e8ce9507dfffe36

--- a/presentation.html
+++ b/presentation.html
@@ -392,7 +392,29 @@ td.hdlist1 {
 link.rel = 'stylesheet';
 link.type = 'text/css';
 link.href = window.location.search.match( /print-pdf/gi ) ? "https://cdn.jsdelivr.net/npm/reveal.js@3.9.2/css/print/pdf.css" : "https://cdn.jsdelivr.net/npm/reveal.js@3.9.2/css/print/paper.css";
-document.getElementsByTagName( 'head' )[0].appendChild( link );</script></head><body><div class="reveal"><div class="slides"><section class="title" data-state="title"><h1>Modern CI/CD</h1><div class="preamble"><div class="paragraph"><p><strong>2021-07-27</strong></p></div></div><p class="author"><small>Марат Радченко</small></p></section>
+document.getElementsByTagName( 'head' )[0].appendChild( link );</script></head><body><div class="reveal"><div class="slides"><section class="title" data-state="title"><h1>Modern CI/CD</h1><div class="preamble"><div class="paragraph"><p><strong>2021-08-03</strong></p></div></div><p class="author"><small>Марат Радченко</small></p></section>
+<section><section id="_поколения_ci"><h2>Поколения CI</h2><div class="slide-content"><div class="olist arabic"><ol class="arabic"><li><p>Jenkins (2005), Teamcity (2006)</p></li><li><p>AppVeyor (2011), Travis CI (2011), GitLab CI (2015)</p></li><li><p>CircleCI (2017), GitHub Actions (2018)</p></li></ol></div></div></section><section id="_1_jenkins_teamcity"><h2>1: Jenkins, Teamcity</h2><div class="slide-content"><div class="ulist"><ul><li><p>Настройка через UI</p></li><li><p>Installation-wide админские права</p></li><li><p>Непереносимость</p></li><li><p>Билды на хост-системе</p></li></ul></div></div></section><section id="_2_appveyor_travis_ci_gitlab_ci"><h2>2: AppVeyor, Travis CI, GitLab CI</h2><div class="slide-content"><div class="ulist"><ul><li><p>Дискавери репозиториев</p></li><li><p>Configuration as a code</p></li><li><p>Права на уровне репозиториев/проектов</p></li><li><p>Виртуализированные агенты</p></li></ul></div></div></section><section id="_3_circleci_github_actions"><h2>3: CircleCI, GitHub Actions</h2><div class="slide-content"><div class="ulist"><ul><li><p>Всё что есть во втором поколении</p></li><li><p>Локальный запуск билдов</p></li><li><p>Actions/Orbs: реюзабельные куски билд-пайплайна</p></li></ul></div></div></section></section>
+<section><section id="_actions"><h2>Actions</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-yaml hljs" data-noescape="true" data-lang="yaml">steps:
+- uses: actions/checkout@v2
+- uses: ruby/setup-ruby@v1
+  with:
+    ruby-version: 2.6
+- run: bundle exec rake</code></pre></div></div><div class="ulist"><ul><li><p>Экшены в отдельных репозиториях</p></li><li><p>Inputs</p></li><li><p>Выполняются в изолированном окружении</p></li><li><p>Orbs: 2700+</p></li><li><p>Actions: over 9000</p></li></ul></div></div></section><section id="_кейс_отправить_сообщение_в_slack"><h2>Кейс: отправить сообщение в Slack</h2><div class="slide-content"><div class="ulist"><ul><li><p>Jenkins: установить плагин (через рестарт, конечно)</p></li><li><p>GitLab CI: врукопашную дёргать HTTP API</p></li><li><p>GitHub Actions:</p></li></ul></div>
+<div class="listingblock"><div class="content"><pre>- uses: slackapi/slack-github-action@v1.14.0
+  with:
+    channel-id: 'CHANNEL_ID'
+    slack-message: 'hello!'</pre></div></div></div></section><section id="_кейс_clang_format"><h2>Кейс: clang-format</h2><div class="slide-content"><div class="ulist"><ul><li><p>Jenkins: 😐</p></li><li><p>GitLab CI: 😐</p></li><li><p>GitHub Actions:</p></li></ul></div>
+<div class="listingblock"><div class="content"><pre>steps:
+- uses: actions/checkout@v2
+- uses: DoozyX/clang-format-lint-action@v0.12
+  with:
+    source: '.'
+    exclude: './lib'
+    clangFormatVersion: 12</pre></div></div></div></section></section>
+<section id="_контейнеры_виртуалки"><h2>Контейнеры, виртуалки</h2><div class="slide-content"><div class="ulist"><ul><li><p>Билд-агенты <strong>одинаковые</strong></p></li><li><p>Отмена билдов</p></li><li><p>Установка софта</p></li><li><p>Autoscaling</p></li><li><p>MacOS? Ну да, ну да, пошел я нахер</p></li></ul></div></div></section>
+<section id="_continuous_deployment"><h2>Continuous Deployment</h2><div class="slide-content"><div class="ulist"><ul><li><p>Kubernetes, Nomad</p></li><li><p>Возможность динамически <strong>создавать и удалять</strong> тестовые стенды</p></li><li><p>Интеграция с мерж-реквестами</p></li></ul></div>
+<div class="imageblock"><img src="images/gitlab_environments.png" alt="gitlab environments"></div></div></section>
+<section><section id="_bonus_windows_containers"><h2>Bonus: Windows Containers</h2><div class="slide-content"><div class="imageblock"><img src="images/win_in_win.png" alt="win in win"></div><div class="paragraph"><p>Положил Windows в Windows, чтобы запускать Windows пока я запускаю Windows</p></div></div></section><section id="_изоляция"><h2>Изоляция</h2><div class="slide-content"><div class="ulist"><ul><li><p>Process</p></li><li><p>Hyper-V</p></li></ul></div></div></section><section id="_совместимость"><h2>Совместимость</h2><div class="slide-content"><div class="ulist"><ul><li><p>Ядро, API</p></li><li><p>Windows Server vs Desktop</p></li><li><p>Windows 10 21H1</p></li><li><p>Windows 11</p></li></ul></div></div></section><section id="_жизненный_цикл"><h2>Жизненный цикл</h2><div class="slide-content"><div class="ulist"><ul><li><p>LTSC</p></li><li><p>SAC</p></li></ul></div></div></section><section id="_размер"><h2>Размер</h2><div class="slide-content"><div class="ulist"><ul><li><p><code>mcr.microsoft.com/windows/servercore</code>: 5.7GB</p></li><li><p><code>mcr.microsoft.com/windows</code>: 15GB</p></li></ul></div></div></section></section>
 <section id="_the_end"><h2>The End</h2></section></div></div><script src="https://cdn.jsdelivr.net/npm/reveal.js@3.9.2/js/reveal.js"></script><script>Array.prototype.slice.call(document.querySelectorAll('.slides section')).forEach(function(slide) {
   if (slide.getAttribute('data-background-color')) return;
   // user needs to explicitly say he wants CSS color to override otherwise we might break custom css or theme (#226)
